# voiceai-di

./: .gitignore  pyproject.toml  voiceai-di.code-workspace
example/: container.py  main.py  repositories.py  services.py  use_cases.py
va_di/: __init__.py  container.py  exceptions.py
