[tool.poetry]
name = "voiceai-di"
version = "0.1.0"
description = ""
authors = ["Atrem Orlov <aigorevichorlov@sberbank.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-select = ["Q"]

src = ["policies", "tests"]
exclude = [".venv", ".git", "__pycache__", "build", "dist", "venv"]

select = [
    "E", # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "C901", # too complex
]

target-version = "py311"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
known-first-party = []

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.mypy]
files = ["va_di", "example"]
disable_error_code = "import-untyped"
strict_optional = false
